<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="330dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="190dp"
            android:layout_height="389dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#f1ab07"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_TeamA"
                android:textColor="#0531f9"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fa0a0a"
                    android:textSize="18sp"
                    android:text="@string/app_Point"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#fa0a0a"
                    android:textSize="25sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fa0a0a"
                    android:textSize="18sp"
                    android:text="@string/app_Set"/>

                <TextView
                    android:id="@+id/team_a_score_set"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="52dp"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="#fa0a0a"
                    android:textSize="25sp"  />
            </LinearLayout>

            <Button
                android:id="@+id/points_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="A_Game_points"
                android:text="@string/app_Game_Point" />

            <Button
                android:id="@+id/points_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="A_Set_points"
                android:text="@string/app_Manual_Set_Point" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="389dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#f1ab07"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/linearLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_TeamB"
                android:textColor="#0531f9"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#fa0a0a"
                    android:textSize="18sp"
                    android:text="@string/app_Point"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="displayForTeamB"
                    android:layout_marginLeft="36dp"
                    android:text="0"
                    android:textColor="#fa0a0a"
                    android:textSize="25sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#fa0a0a"
                    android:textSize="18sp"
                    android:text="@string/app_Set"/>

                <TextView
                    android:id="@+id/team_b_score_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="52dp"
                    android:onClick="displayForTeamBset"
                    android:text="0"
                    android:textColor="#fa0a0a"
                    android:textSize="25sp" /></LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="B_Game_points"
                android:text="@string/app_Game_Point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="B_Set_points"
                android:text="@string/app_Manual_Set_Point" />


        </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/Victory_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="#74ea05"
        android:textSize="40sp"
        android:onClick="VictoryMessage"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18sp"
        android:background="#f1ab07"
        android:onClick="resetpoints"
        android:text="@string/app_Reset" />
</RelativeLayout>